force-app/main/default/objects/HiringPanelMember__c/HiringPanelMember__c.object-meta.xml
<CustomObject>
    <description>Hiring Panel Members</description>
    <label>Hiring Panel Member</label>
    <nameField>
        <displayFormat>SFHPM-{000000}</displayFormat>
        <label>HiringPanelMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiring Panel Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>