force-app/main/default/objects/HiringPanelMember__c/fields/HiringPanel__c.field-meta.xml
<CustomField>
    <fullName>HiringPanel__c</fullName>
    <label>HiringPanel</label>
    <referenceTo>HiringPanel__c</referenceTo>
    <relationshipName>HiringPanelMember</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>