force-app/main/default/objects/HiringPanelMember__c/fields/OrganisingCommitteeMember__c.field-meta.xml
<CustomField>
    <fullName>OrganisingCommitteeMember__c</fullName>
    <label>OrganisingCommitteeMember</label>
    <referenceTo>OrganisingCommitteeMember__c</referenceTo>
    <relationshipLabel>HiringPanelMember</relationshipLabel>
    <relationshipName>HiringPanelMember</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>